@@ -1,4 +1,8 @@
-﻿shmuel 17.03.2016 18:18:54 +0200 - build 567
+﻿shmuel 10.04.2016 14:36:10 +0200 - build 568
+
+1. Изменение в поведении mf.iif() при Expr==0 для более полной совместимости с оригиналом.
+
+shmuel 17.03.2016 18:18:54 +0200 - build 567
 
 1. Кастомные сортировки в панелях повреждали содержимое внутренних структур FileListItem
    (это проявлялось при сборке Far с GCC 5.2 или 5.3).
